# brave-core

./: README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json
android/: BUILD.gn  brave_java_sources.gni
app/: actor_strings.grdp  brave_origin_strings.grd  brave_strings.grd  brave_strings_override.grd  feature_defaults_unittest.cc  generated_resources.grd  profiles_strings.grdp
browser/: about_flags.cc  brave_content_browser_client.cc  brave_profile_prefs.cc  brave_scheme_load_browsertest.cc  browser_context_keyed_service_factories.cc  sources.gni
components/: autofill_strings.grdp  policy_strings.grdp
components/containers/core/browser/: BUILD.gn  containers_service.cc  containers_service.h  containers_service_unittest.cc  prefs.cc  prefs.h  prefs_registration.cc  prefs_unittest.cc
ios/browser/web/reader_mode/: BUILD.gn  reader_mode_javascript_feature.mm
ios/browser/web/reader_mode/resources/: brave_reader_mode.ts
patches/: base-BUILD.gn.patch  build-config-android-config.gni.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-feed-core-java-src-org-chromium-chrome-browser-feed-FeedSurfaceMediator.java.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-ChromeTabbedActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-app-ChromeActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-ntp-NewTabPage.java.patch  chrome-android-java-src-org-chromium-chrome-browser-sync-settings-ManageSyncSettings.java.patch  chrome-android-java-src-org-chromium-chrome-browser-toolbar-ToolbarManager.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-bookmarks-android-BUILD.gn.patch  chrome-browser-chrome_browser_main_mac.mm.patch  chrome-browser-extensions-BUILD.gn.patch  chrome-browser-hub-internal-BUILD.gn.patch  chrome-browser-net-profile_network_context_service.cc.patch  chrome-browser-prefs-BUILD.gn.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-profiles-profile_impl.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.h.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-actions-chrome_action_id.h.patch  chrome-browser-ui-android-toolbar-BUILD.gn.patch  chrome-browser-ui-browser.cc.patch  chrome-browser-ui-browser_window-internal-BUILD.gn.patch  chrome-browser-ui-browser_window-public-browser_window_features.h.patch  chrome-browser-ui-chrome_pages.cc.patch  chrome-browser-ui-side_panel-side_panel_entry_id.h.patch  chrome-browser-ui-tabs-public-tab_features.h.patch  chrome-browser-ui-tabs-recent_tabs_sub_menu_model_browsertest.cc.patch  chrome-browser-ui-tabs-tab_style.cc.patch  chrome-browser-ui-views-bookmarks-bookmark_bubble_view.cc.patch  chrome-browser-ui-views-frame-browser_view.cc.patch  chrome-browser-ui-views-frame-horizontal_tab_strip_region_view.cc.patch  (+51 more)
test/: BUILD.gn
(+187 files in other folders)
