# Copyright (c) 2025 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/components/containers/buildflags/buildflags.gni")

assert(enable_containers)

static_library("browser") {
  sources = [
    "containers_service.cc",
    "containers_service.h",
    "containers_settings_handler.cc",
    "containers_settings_handler.h",
    "pref_names.h",
    "prefs.cc",
    "prefs.h",
  ]

  public_deps = [ "//brave/components/containers/core/mojom" ]

  deps = [
    "//base",
    "//brave/components/containers/core/common",
    "//components/keyed_service/core",
    "//components/pref_registry",
    "//components/prefs",
    "//components/user_prefs",
    "//net/base/registry_controlled_domains",
    "//services/network/public/cpp",
    "//third_party/re2",
    "//url",
  ]
}

source_set("unit_tests") {
  testonly = true
  sources = [
    "containers_service_unittest.cc",
    "containers_settings_handler_unittest.cc",
    "prefs_unittest.cc",
  ]

  deps = [
    ":browser",
    "//base",
    "//base/test:test_support",
    "//brave/components/containers/core/common",
    "//components/sync_preferences:test_support",
    "//mojo/public/cpp/bindings",
    "//testing/gmock",
    "//testing/gtest",
  ]
}
